// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/RadioButtonGroup Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hANpeK sc-fmrZth dUEvSK sc-eXBvqI liZNNF"
      role="radiogroup"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 inzTRD"
        for="plain 1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jdNwVT StyledRadioButton-sc-g1f6ld-5 hXfoNY"
        >
          <input
            checked=""
            class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
            id="plain 1"
            name="radio button group"
            tabindex="0"
            type="radio"
            value="plain 1"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iPqiqc StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
          >
            <svg
              class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 fAeStl"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="6"
              />
            </svg>
          </div>
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          plain 1
        </span>
      </label>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 qdAYv"
      />
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 inzTRD"
        for="plain 2"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jdNwVT StyledRadioButton-sc-g1f6ld-5 hXfoNY"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
            id="plain 2"
            name="radio button group"
            tabindex="-1"
            type="radio"
            value="plain 2"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 hXJqqc StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          plain 2
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/RadioButtonGroup With Expanded Options 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hANpeK sc-fmrZth fOtvKK sc-eXBvqI liZNNF"
      role="radiogroup"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ixkEGa"
        disabled=""
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jdNwVT StyledRadioButton-sc-g1f6ld-5 hXfoNY"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 dTlTkb"
            disabled=""
            name="radio button group"
            tabindex="-1"
            type="radio"
            value="disabled"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 hXJqqc StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          disabled
        </span>
      </label>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 qdAYv"
      />
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 inzTRD"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jdNwVT StyledRadioButton-sc-g1f6ld-5 hXfoNY"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
            name="radio button group"
            tabindex="-1"
            type="radio"
            value="enabled"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 hXJqqc StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          enabled
        </span>
      </label>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 qdAYv"
      />
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 inzTRD"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jdNwVT StyledRadioButton-sc-g1f6ld-5 hXfoNY"
        >
          <input
            checked=""
            class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
            name="radio button group"
            tabindex="0"
            type="radio"
            value="selected"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iPqiqc StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
          >
            <svg
              class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 fAeStl"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="6"
              />
            </svg>
          </div>
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          selected
        </span>
      </label>
    </div>
  </div>
</div>
`;
